better swagger
