# app/controller/main.go
@@ -4,6 +4,7 @@ import (
 	"fmt"
 	"log/slog"
 	"net/http"
+	"sort"
 	"strings"
 	"time"
 
@@ -16,19 +17,21 @@ import (
 	echoSwagger "github.com/swaggo/echo-swagger"
 
 	"github.com/drmaples/starter-app/app/platform"
-	_ "github.com/drmaples/starter-app/docs" // docs generated by swag cli
+	"github.com/drmaples/starter-app/docs" // docs generated by swag cli
 )
 
-//	@title			Sample App
-//	@version		1.0
-//	@description	some description here
+// @title Sample App
+// @version 1.0
+// @description	some description here
 
-//	@contact.name	API Support
-//	@contact.url	http://www.swagger.io/support
-//	@contact.email	support@swagger.io
+// @contact.name API Support
+// @contact.url http://www.swagger.io/support
+// @contact.email support@swagger.io
 
-//	@host		localhost:8080
-//	@BasePath	/
+// @BasePath /
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name x-jwt-token
 
 // GetServerAddress is address where server runs
 func GetServerAddress() string {
@@ -42,6 +45,10 @@ func GetServerBindAddress() string {
 
 // Initialize sets up the controller layer
 func Initialize() *echo.Echo {
+	// programmatically set swagger info
+	docs.SwaggerInfo.Host = strings.SplitAfter(GetServerAddress(), "://")[1]
+	docs.SwaggerInfo.Schemes = []string{"http"}
+
 	e := echo.New()
 	if platform.Config().Environment != "dev" {
 		e.HideBanner = true
@@ -62,14 +69,13 @@ func Initialize() *echo.Echo {
 		unrestricted.GET("/login", handleLogin)
 		unrestricted.GET(oauthCallbackURL, handleOauthCallback)
 
+		unrestricted.GET("/swagger/*", echoSwagger.WrapHandler)
 		unrestricted.GET("/docs", func(c echo.Context) error {
 			return c.Redirect(http.StatusTemporaryRedirect, "/swagger/index.html")
 		})
-
-		unrestricted.GET("/swagger/*", echoSwagger.WrapHandler)
 	}
 
-	restricted := e.Group("")
+	restricted := e.Group("/v1")
 	{
 		restricted.Use(
 			echojwt.WithConfig(echojwt.Config{
@@ -77,6 +83,7 @@ func Initialize() *echo.Echo {
 				NewClaimsFunc: func(c echo.Context) jwt.Claims {
 					return new(jwtCustomClaims)
 				},
+				TokenLookup: "header:x-jwt-token",
 			}),
 		)
 		restricted.GET("/user", handleListUsers)
@@ -86,7 +93,11 @@ func Initialize() *echo.Echo {
 
 	// list routes in use like gin. keep at bottom
 	if platform.Config().Environment == "dev" {
-		for _, r := range e.Routes() {
+		allRoutes := e.Routes()
+		sort.SliceStable(allRoutes, func(i, j int) bool {
+			return allRoutes[i].Path < allRoutes[j].Path
+		})
+		for _, r := range allRoutes {
 			fmt.Printf("[%-5s] %-35s --> %s\n", strings.ToUpper(r.Method), r.Path, r.Name)
 		}
 	}
